Update actions workflow

--- a/.github/workflows/update-room-plan.yml
+++ b/.github/workflows/update-room-plan.yml
@@ -3,6 +3,7 @@ name: update-room-plan
 on:
   schedule:
     - cron: '0 6 * * *' # runs at 06:00 UTC everyday
+  workflow_dispatch:
 
 jobs:
   build:
