--- a/.github/workflows/update-room-plan.yml
+++ b/.github/workflows/update-room-plan.yml
@@ -23,11 +23,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           
-      - name: execute py script # run sj-gobierno.py to get the latest data
-        env: 
-          EMAIL_ADDRESS: ${{ secrets.EMAIL_ADDRESS }}
-          EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
-          EMAIL_RECIPIENT: ${{ secrets.EMAIL_RECIPIENT }}
+      - name: execute python script # run sj-gobierno.py to get the latest data
         run: python parse.py
           
       - name: commit files
