--- a/.github/workflows/update-room-plan.yml
+++ b/.github/workflows/update-room-plan.yml
@@ -2,37 +2,36 @@ name: update-room-plan
 
 on:
   schedule:
-    - cron: '0 6 * * *' # runs at 06:00 UTC everyday
+    - cron: "0 6 * * *" # runs at 06:00 UTC everyday
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-
       - name: checkout repo content
         uses: actions/checkout@v2 # checkout the repository content to github runner
 
       - name: setup python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8.8' # install the python version needed
-          
+          python-version: "3.8.8" # install the python version needed
+
       - name: install python packages
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          
+
       - name: execute python script # run sj-gobierno.py to get the latest data
         run: python parse.py
-          
+
       - name: commit files
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add -A
           git commit -m "Update room plan resources" -a
-          
+
       - name: push changes
         uses: ad-m/github-push-action@v0.6.0
         with:
