--- a/.github/workflows/update-room-plan.yml
+++ b/.github/workflows/update-room-plan.yml
@@ -2,7 +2,7 @@ name: update-room-plan
 
 on:
   schedule:
-    - cron: "0 4 * * *" # runs at 06:00 UTC everyday
+    - cron: "0 5 30 * *" # runs at 07:30 german time (MESZ) everyday
   workflow_dispatch:
 
 jobs:
