--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,5 +1,5 @@
-icalevents
-requests
-python-dateutil
-matplotlib==3.5.0
-pandas
+icalevents>=0.1.25
+requests>=2.28.1
+python-dateutil>=2.8.2
+matplotlib>=3.5.3
+pandas>=1.4.3
