--- a/.github/workflows/update-room-plan.yml
+++ b/.github/workflows/update-room-plan.yml
@@ -15,7 +15,7 @@ jobs:
       - name: setup python
         uses: actions/setup-python@v3
         with:
-          python-version: "3.8.8" # install the python version needed
+          python-version: "3.x" # install the python version needed
 
       - name: install python packages
         run: |
