--- a/.github/workflows/update-room-plan.yml
+++ b/.github/workflows/update-room-plan.yml
@@ -39,10 +39,5 @@ jobs:
               git config --local user.name "GitHub Action"
               git add -A
               git commit -m "Update room plan resources" -a
+              git push
         shell: bash
-
-      - name: push changes
-        uses: ad-m/github-push-action@v0.6.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main
